<resources>
    <string name="app_name">Wydatki Obozowe</string>
    <string name="title_summary">Podsumowanie</string>
    <string name="title_documents">Dokumenty</string>
    <string name="title_camps">Obozy</string>
    <string name="document_type_format">%s nr</string>
    <string name="document_number">Nr dokumentu</string>
    <string name="document_date">Data wystawienia</string>
    <string name="amount">Kwota</string>
    <string name="comment">Uwagi</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="from_troop_account">Płacone bezpośrednio z konta hufca:</string>
    <string name="document_type">Typ dokumentu</string>
    <string name="category">Kategoria</string>
    <string name="save_changes">Zapisz zmiany</string>
    <string name="vat_invoice">Faktura</string>
    <string name="groceries">Art. spożywcze</string>
    <string name="pln">zł</string>
    <string name="destination_label">{arg_label}</string>
    <string name="edit_document_title">Edytuj Dokument</string>
    <string name="edit_camp_title">Edytuj Obóz</string>
    <string name="add_document_title">Dodaj Dokument</string>
    <string name="add_camp_title">Dodaj Obóz</string>
    <string name="delete_document">Usuń dokument</string>
    <string name="delete_document_dialog_msg">Usunąć ten dokument?</string>
    <string name="delete_camp_dialog_msg">Usunąć ten obóz i wszystkie powiązane z nim dokumenty?</string>
    <string name="delete">Usuń</string>
    <string name="cancel">Anuluj</string>
    <string name="cancel_changes">Anuluj zmiany</string>
    <string name="checkmark_icon">Ikonka fajeczki</string>
    <string name="camp_name">Nazwa obozu</string>
    <string name="budget">Budżet</string>
    <string name="camp_date">Termin obozu</string>
    <string name="camp_date_format">%s - %s</string>
    <string name="delete_camp">Usuń obóz</string>
    <string name="more_options_icon">Ikonka więcej opcji</string>
    <string name="choose_as_active">Wybierz jako aktywny</string>
    <string name="export_to_file">Eksportuj do pliku</string>
    <string name="error_saving_document">Wystąpił błąd. Dokument nie zapisany.</string>
    <string name="error_deleting_document">Wystąpił błąd. Dokument nie usunięty.</string>
    <string name="changes_saved">Zapisano zmiany</string>
    <string name="document_deleted">Usunięto dokument</string>
    <string name="error_saving_camp">Wystąpił błąd. Obóz nie zapisany.</string>
    <string name="error_deleting_camp">Wystąpił błąd. Obóz nie usunięty.</string>
    <string name="camp_deleted">Usunięto obóz</string>
    <string name="camp_already_active">Obóz jest już aktywny</string>
    <string name="error_setting_as_active">Wystąpił błąd. Obóz nie wybrany jako aktywny.</string>
    <string name="camp_set_as_active">Wybrano obóz jako aktywny</string>
    <string name="remaining_money_label">Pozostało w sumie:</string>
    <string name="money_per_day_label">Środków na 1 dzień:</string>
    <string name="remaining_days_label">Pozostało dni obozu:</string>
    <string name="changes_discarded">Odrzucono zmiany</string>
    <string name="document_added">Dodano dokument</string>
    <string name="camp_added">Dodano obóz</string>
    <string name="add_camp">Dodaj obóz</string>
    <string name="add_document">Dodaj dokument</string>
    <string name="documents_empty_view_hint">Aby dodać dokument kliknij w przycisk +</string>
    <string name="documents_empty_view_if_searching">Nie znaleziono pasujących dokumentów</string>
    <string name="budget_label">Budżet:</string>
    <string name="csv_file_saved">Zapisano plik CSV</string>
    <string name="send">Wyślij</string>
    <string name="search_documents">Szukaj dokumentów</string>
    <string name="about_description">Aplikacja stworzona dla szefów służących w Skautach Europy. \nDzięki niej możesz łatwiej kontrolować obozowe wydatki oraz sprawniej rozliczyć wyjazd.</string>
    <string name="developer_label">Deweloper:</string>
    <string name="app_developer" translatable="false">Franciszek Bogulak</string>
    <string name="version_label">Wersja:</string>
    <string name="about">O Aplikacji</string>
    <string name="document_category_helper_text">Wpisz w uwagach czego dotyczyły wydatki</string>
    <string name="more_info_icon">Ikonka więcej informacji</string>
    <string name="document_category_info_message">Jeśli dokument nie pasuje do żadnej z poniższych kategorii - wybierz kategorię \"Art. na obóz\" i wpisz w Uwagach czego dotyczyły wydatki.</string>
    <string name="ok">OK</string>
    <string name="groceries_per_day_label">Wydatki na art. spożywcze na 1 dzień:</string>
    <string name="sort_by_document_date">Sortuj wg daty wystawienia</string>
    <string name="sort_by_creation_timestamp">Sortuj wg daty dodania</string>
    <string name="preference_file_key">pl.skaucieuropy.rozliczwyjazd.PREFERENCE_FILE_KEY</string>
    <string name="saved_documents_order_by_key">DOCUMENTS_ORDER_BY</string>
    <string name="should_save_incorrect_document_title">Czy zapisać błędny dokument?</string>
    <string name="this_is_not_simplified_invoice_error_message">Paragon z NIP-em powyżej 450 zł nie jest fakturą uproszczoną i nie może być włączony do rozliczenia.\nAby móc włączyć wydatek do rozliczenia poproś sprzedawcę o wystawienie faktury VAT do tego paragonu z NIP-em.\n\nCzy do tego czasu chcesz zachować w aplikacji nieprawidłowy dokument?</string>
    <string name="amount_from_one_percent_over_amount_error_message">Kwota z 1,5% musi być mniejsza lub równa kwocie dokumentu. Aby móc zapisać dokument proszę poprawić kwoty.</string>
    <string name="amount_over_450">Kwota powyżej 450 zł</string>
    <string name="amount_from_one_percent_over_amount">Kwota z 1,5% przekracza kwotę dokumentu</string>
    <string name="amount_from_one_percent">Pokryte z 1,5% podatku (kwota)</string>
    <string name="invoice_data">Dane do faktury</string>
    <string name="scouts_of_europe">Skauci Europy</string>
    <string name="address_value">ul. Gibraltarska 4\n03-664 Warszawa</string>
    <string name="tax_number">NIP: 712 015 74 69</string>
    <string name="share">Udostępnij</string>
    <string name="invoice_data_format">%s:\n%s\n%s\n%s</string>
</resources>