<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/search_documents"
        android:icon="@drawable/ic_search"
        android:title="@string/search_documents"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/sort_by_document_date"
        android:title="@string/sort_by_document_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_by_creation_timestamp"
        android:title="@string/sort_by_creation_timestamp"
        app:showAsAction="never" />
</menu>