<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/summaryFragment">

    <fragment
        android:id="@+id/summaryFragment"
        android:name="pl.skaucieuropy.rozliczwyjazd.ui.summary.SummaryFragment"
        android:label="@string/title_summary"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/documentsFragment"
        android:name="pl.skaucieuropy.rozliczwyjazd.ui.documents.DocumentsFragment"
        android:label="@string/title_documents"
        tools:layout="@layout/fragment_documents" />

    <fragment
        android:id="@+id/campsFragment"
        android:name="pl.skaucieuropy.rozliczwyjazd.ui.camps.CampsFragment"
        android:label="@string/title_camps"
        tools:layout="@layout/fragment_camps" />
</navigation>