<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="pl.skaucieuropy.rozliczwyjazd.ui.about.AboutViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/about_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadlineSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/about_description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_description"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_title_text" />

            <TextView
                android:id="@+id/developer_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/developer_label"
                android:textAppearance="?attr/textAppearanceLabelLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_description_text" />

            <TextView
                android:id="@+id/developer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/app_developer"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintBaseline_toBaselineOf="@+id/developer_label"
                app:layout_constraintStart_toEndOf="@+id/developer_label" />

            <TextView
                android:id="@+id/version_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/version_label"
                android:textAppearance="?attr/textAppearanceLabelLarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/developer_label" />

            <TextView
                android:id="@+id/version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{viewModel.versionName}"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/version_label"
                app:layout_constraintStart_toEndOf="@+id/version_label"
                tools:text="1.0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>