<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/scouts_of_europe_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/scouts_of_europe"
                    android:textAppearance="?attr/textAppearanceTitleLarge"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/address_text"
                    app:layout_constraintEnd_toEndOf="@+id/address_text"
                    app:layout_constraintStart_toStartOf="@+id/address_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/address_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/address_value"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/tax_number_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/scouts_of_europe_text" />

                <TextView
                    android:id="@+id/tax_number_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/tax_number"
                    android:textAppearance="?attr/textAppearanceLabelLarge"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@id/share_button"
                    app:layout_constraintEnd_toEndOf="@+id/address_text"
                    app:layout_constraintStart_toStartOf="@+id/address_text"
                    app:layout_constraintTop_toBottomOf="@+id/address_text" />

                <Button
                    android:id="@+id/share_button"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    app:icon="@drawable/ic_share"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tax_number_text" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tax_number_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/scouts_of_europe_text"
                    app:srcCompat="@drawable/logo" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>